-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Qt 5.3.1
Windows 8 and Archlinux
-
fb22d54aa113764adb68047460999a41a18c93fd
When visiting https://github.com/uzbl/uzbl (e.g. with the Qt example browser) and scrolling down, as soon as the description is reached, scrolling gets very slow and laggy (around 1 step per second), with 100% CPU usage.
| For Gerrit Dashboard: QTBUG-40559 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 103250,4 | Improve performance of path clipping in rasterizer | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 103595,3 | Improve performance of path clipping in rasterizer | dev | qt/qtbase | Status: MERGED | +2 | 0 |